# capstone_project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  mlflow.db  pyproject.toml  pytest_output.txt  requirements.txt  test_out.txt  test_run.py
.dvc/: config
.github/workflows/: app.yml  poc.yml  tests.yml
Notebooks/: eda.ipynb
configs/: generate_sample_df.yml  llm_prompts.yml  llm_utils.yml  model_target.yml
docs/: branch_notes.txt  plan.md
mlruns/0/13881bbafe674199931e64c9eacaf543/artifacts/: cv_metrics.csv
mlruns/0/1b5667c0e17e48cfba1deae1e09929d3/artifacts/: cv_metrics.csv
reports/: avg_cv_metrics.csv  runs.csv
reports/DecisionTree/: cv_metrics.csv
reports/ElasticNet/: best_hyperparameters_ElasticNet.csv  cv_metrics.csv
reports/GradientBoosting/: cv_metrics.csv
reports/Lasso/: cv_metrics.csv
reports/LightGBM/: cv_metrics.csv
reports/Linear/: cv_metrics.csv
reports/Logistic/: cv_metrics.csv
reports/LogisticRegression/: best_hyperparameters_LogisticRegression.csv
reports/RandomForest/: best_hyperparameters_RandomForest.csv  cv_metrics.csv
reports/Ridge/: best_hyperparameters_Ridge.csv  cv_metrics.csv
reports/SVC/: cv_metrics.csv
reports/SVR/: best_hyperparameters_SVR.csv  cv_metrics.csv
reports/XGBoost/: cv_metrics.csv
scripts/: smoke_test.py  validate_ci.py
src/: README.md  cleaning_operations.py  generate_sample_df.py  llm_cleaning.py  llm_utils.py  model_target.py  operations.py  registry.py  text_parser.py
src/llm/: llm_utils.py  operations.py  text_parser.py
tests/: test_app.py  test_generate_sample_df.py  test_llm_utils.py  test_model_target.py  test_operations.py  test_text_parser.py
(+470 files in other folders)
