[project]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = [
    {name = "angelomp2001",email = "apassala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (==1.44.1)",
    "pandas (==2.2.3)",
    "numpy (==2.2.5)",
    "requests (==2.32.3)",
    "pyyaml (==6.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
