[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["angelomp2001 <apassala@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
streamlit = "1.45.0"
pandas = "2.2.3"
numpy = "2.2.5"
requests = "2.32.3"
pyyaml = "6.0.2"
python-dotenv = ">=1.0.1"
openai = "^1.0.0"
pytest-dependency = "^0.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"